--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
+  "name": "react-derma-quiz",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "homepage": "https://roadtofire.github.io/React-Derma-Quiz",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^5.4.11",
+    "@tailwindcss/vite": "^4.1.18",
     "gh-pages": "^6.3.0"
-  },
-  "homepage": "https://RoadtoFire.github.io/React-Derma-Quiz",
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
   }
-
 }
